# volume-commander

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
bench/: mirror.cpp  replay.cpp
src/: CMakeLists.txt
src/app/: Main.qml  main.cpp  state.cpp  state.hpp  trace.hpp  viewer_item.cpp  viewer_item.hpp
src/data/: mask.cpp  mask.hpp  volume.cpp  volume.hpp
src/render/: camera.hpp  compositing.hpp  kernel_avx2.cpp  kernel_avx512.cpp  kernel_dispatch.cpp  renderer.cpp  renderer.hpp  sample_kernel.hpp  surface.cpp  surface.hpp
src/util/: math.hpp
src/utils/: c3d_codec.cpp  c3d_codec.hpp
tests/: test_render.cpp  trace_fixture.jsonl
